z-index fix

--- a/src/components/forms/FormModal/formModal.module.scss
+++ b/src/components/forms/FormModal/formModal.module.scss
@@ -6,6 +6,7 @@
   left: 0;
   right: 0;
   bottom: 0;
+  z-index: 200;
 
   display: flex;
   justify-content: center;
@@ -27,7 +28,7 @@
   border-radius: var(--border-radius-20);
   background-color: var(--bg-primary);
   text-align: left;
-
+  z-index: 400;
   display: flex;
   flex-direction: column;
   gap: var(--gap-20);
